--- a/notebook/t003_img_edits.ipynb
+++ b/notebook/t003_img_edits.ipynb
@@ -16,7 +16,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import openai\n",
+    "from pathlib import Path\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
   }
  ],
  "metadata": {
