--- a/notebook/t001_txt_to_img.ipynb
+++ b/notebook/t001_txt_to_img.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,104 @@
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject at 0x2550c1273b0> JSON: {\n",
+       "  \"created\": 1682775871,\n",
+       "  \"data\": [\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-7eBDVktsqowQVod1g4Eqd5mc.png?st=2023-04-29T12%3A44%3A31Z&se=2023-04-29T14%3A44%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A14%3A26Z&ske=2023-04-30T00%3A14%3A26Z&sks=b&skv=2021-08-06&sig=4vy6soLGc06q%2BeML42cLiJzHwY1WR%2BWGCMXRYAOT/dk%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-TubCVBwM5buX9qeZdugZUpd3.png?st=2023-04-29T12%3A44%3A31Z&se=2023-04-29T14%3A44%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A14%3A26Z&ske=2023-04-30T00%3A14%3A26Z&sks=b&skv=2021-08-06&sig=ElAkNXn1qcSJMyyjOuaTGaYWXdE/6wEXB6ucMEi7u8I%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-JSIgyJO8nNKvtRbgFk0Loj7o.png?st=2023-04-29T12%3A44%3A31Z&se=2023-04-29T14%3A44%3A31Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A14%3A26Z&ske=2023-04-30T00%3A14%3A26Z&sks=b&skv=2021-08-06&sig=wNKddkwXwzhhp6DGE9n5ptthtjHSljo6Qvf3NZn5a3k%3D\"\n",
+       "    }\n",
+       "  ]\n",
+       "}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generated images can have a size of 256x256, 512x512, or 1024x1024 pixels\n",
+    "# InvalidRequestError\n",
+    "# RateLimitError\n",
+    "\n",
+    "prompt = \"photorealistic image of Richard Feynman\"\n",
+    "N = 3\n",
+    "\n",
+    "response = openai.Image.create(\n",
+    "    prompt = prompt,\n",
+    "    n = N,\n",
+    "    size=\"512x512\",\n",
+    ")\n",
+    "\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "outcome_dirpath = Path(\"../outcome\")\n",
+    "outcome_dirpath.mkdir(exist_ok=True)\n",
+    "\n",
+    "for idx in range(N):\n",
+    "\n",
+    "    image_url = response[\"data\"][idx][\"url\"]\n",
+    "    \n",
+    "    req_response = requests.get(url=image_url, timeout=10)\n",
+    "\n",
+    "    prompt_outcome_filepath = outcome_dirpath / f\"richard_{idx}.png\"\n",
+    "\n",
+    "    if req_response.status_code == 200:\n",
+    "        with open(prompt_outcome_filepath, \"wb\") as output:\n",
+    "            output.write(req_response.content)\n",
+    "    else:\n",
+    "        req_response.raise_for_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
