img var expt complete

--- a/notebook/t002_img_variations.ipynb
+++ b/notebook/t002_img_variations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,104 @@
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_image = Path(\"../input_images/DALL·E 2023-04-29 09.48.11 - photorealistic image retro gas station, with ford mustange, year 70s.png\")\n",
+    "\n",
+    "with open(input_image, \"rb\") as input_file:\n",
+    "    our_image = input_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject at 0x21a4dd729a0> JSON: {\n",
+       "  \"created\": 1682776922,\n",
+       "  \"data\": [\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-qX14YlsEAx1Ab5rdQiRayvNg.png?st=2023-04-29T13%3A02%3A02Z&se=2023-04-29T15%3A02%3A02Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A13%3A20Z&ske=2023-04-30T00%3A13%3A20Z&sks=b&skv=2021-08-06&sig=f/yrhW6/KA97EAdGnzDYmeYCfNO3IWoQs8dB3IGLQ9Q%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-TjMzk7N3xrFNEY3c8maQ5sMJ.png?st=2023-04-29T13%3A02%3A02Z&se=2023-04-29T15%3A02%3A02Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A13%3A20Z&ske=2023-04-30T00%3A13%3A20Z&sks=b&skv=2021-08-06&sig=nfVv5exMrtD2x4PRyzcNADpU%2BmNU5R4z88bRMABALYE%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-eEKfpqTSQ2nq1ulQ9GEBYoLY.png?st=2023-04-29T13%3A02%3A02Z&se=2023-04-29T15%3A02%3A02Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A13%3A20Z&ske=2023-04-30T00%3A13%3A20Z&sks=b&skv=2021-08-06&sig=rxI2mqCNqMAvKlV1oMKWPLjYkBZefLDs0tVBLPMQ8s4%3D\"\n",
+       "    }\n",
+       "  ]\n",
+       "}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 3\n",
+    "\n",
+    "response = openai.Image.create_variation(\n",
+    "    image=our_image,\n",
+    "    n=N,\n",
+    "    size=\"512x512\"\n",
+    ")\n",
+    "\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "outcome_dirpath = Path(\"../outcome\")\n",
+    "outcome_dirpath.mkdir(exist_ok=True)\n",
+    "\n",
+    "for idx in range(N):\n",
+    "\n",
+    "    image_url = response[\"data\"][idx][\"url\"]\n",
+    "    \n",
+    "    req_response = requests.get(url=image_url, timeout=10)\n",
+    "\n",
+    "    prompt_outcome_filepath = outcome_dirpath / f\"mustang_{idx}.png\"\n",
+    "\n",
+    "    if req_response.status_code == 200:\n",
+    "        with open(prompt_outcome_filepath, \"wb\") as output:\n",
+    "            output.write(req_response.content)\n",
+    "    else:\n",
+    "        req_response.raise_for_status()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
