--- a/notebook/t003_img_edits.ipynb
+++ b/notebook/t003_img_edits.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,125 @@
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
+    "\n",
+    "our_image_path = Path(\"../input_images/DALL·E 2023-04-29 09.48.19 - photorealistic image retro gas station, with ford mustange, year 70s.png\")\n",
+    "mask_image_path = Path(\"../mask.png\")\n",
+    "\n",
+    "with open(our_image_path, \"rb\") as input_file:\n",
+    "    our_image = input_file.read()\n",
+    "\n",
+    "masked_img = Image.open(mask_image_path)\n",
+    "\n",
+    "masked_img_512 = masked_img.resize((1024, 1024))\n",
+    "\n",
+    "bytes_stream = BytesIO()\n",
+    "masked_img_512.save(bytes_stream, format='PNG')\n",
+    "\n",
+    "mask_image = bytes_stream.getvalue()\n",
+    "# this gives error\n",
+    "# with open(mask_image_path, \"rb\") as input_file:\n",
+    "#     mask_image = input_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<OpenAIObject at 0x167659dbc70> JSON: {\n",
+       "  \"created\": 1682778674,\n",
+       "  \"data\": [\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-LBLgoOpuZ19aQovKDeb4uAAe.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=mBpCPCt%2BerEDj31fSNa6nEYscXNmemD2BdrIPPOzet4%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-4c4CSZhNY96zgaLyZOMsxGlA.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=gAmTGMaAoz3P0imzAfsFSwfew8Zboc3r6k6guVxNlYY%3D\"\n",
+       "    },\n",
+       "    {\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-daieP4elU1KcuQP79pGu1ydK.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=tmK2OMvdyloCrPK6HKvWLTMX3tu6SKKahTTOE8VeJnA%3D\"\n",
+       "    }\n",
+       "  ]\n",
+       "}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# APIConnectionError: Error communicating with OpenAI: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))\n",
+    "prompt = \"put the two blue and white mustangs together in front of each other\"\n",
+    "\n",
+    "N = 3\n",
+    "\n",
+    "response = openai.Image.create_edit(\n",
+    "    image=our_image,\n",
+    "    mask=mask_image,\n",
+    "    prompt=prompt,\n",
+    "    n=N,\n",
+    "    size=\"512x512\"\n",
+    ")\n",
+    "\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "outcome_dirpath = Path(\"../outcome\")\n",
+    "outcome_dirpath.mkdir(exist_ok=True)\n",
+    "\n",
+    "for idx in range(N):\n",
+    "\n",
+    "    image_url = response[\"data\"][idx][\"url\"]\n",
+    "    \n",
+    "    req_response = requests.get(url=image_url, timeout=10)\n",
+    "\n",
+    "    prompt_outcome_filepath = outcome_dirpath / f\"mustang_edit_{idx}.png\"\n",
+    "\n",
+    "    if req_response.status_code == 200:\n",
+    "        with open(prompt_outcome_filepath, \"wb\") as output:\n",
+    "            output.write(req_response.content)\n",
+    "    else:\n",
+    "        req_response.raise_for_status()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
