expt 03 updated and complete

--- a/notebook/t003_img_edits.ipynb
+++ b/notebook/t003_img_edits.ipynb
@@ -8,7 +8,8 @@
     "# Image edits\n",
     "## Reference\n",
     "1. [openai docs](https://platform.openai.com/docs/guides/images)\n",
-    "2. [image edits](https://platform.openai.com/docs/guides/images/edits)"
+    "2. [image edits](https://platform.openai.com/docs/guides/images/edits)\n",
+    "3. [Edit your image](https://labs.openai.com/)"
    ]
   },
   {
@@ -28,75 +29,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# images should be of the format RGBA and PNG \n",
+    "our_image_path = Path(\"../dog_img.png\")\n",
+    "our_masked_image_path = Path(\"../mask_dog_img.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "from io import BytesIO\n",
+    "from typing import Tuple\n",
     "\n",
-    "our_image_path = Path(\"../input_images/DALL·E 2023-04-29 09.48.19 - photorealistic image retro gas station, with ford mustange, year 70s.png\")\n",
-    "mask_image_path = Path(\"../mask.png\")\n",
     "\n",
-    "with open(our_image_path, \"rb\") as input_file:\n",
-    "    our_image = input_file.read()\n",
-    "\n",
-    "masked_img = Image.open(mask_image_path)\n",
-    "\n",
-    "masked_img_512 = masked_img.resize((1024, 1024))\n",
-    "\n",
-    "bytes_stream = BytesIO()\n",
-    "masked_img_512.save(bytes_stream, format='PNG')\n",
-    "\n",
-    "mask_image = bytes_stream.getvalue()\n",
-    "# this gives error\n",
-    "# with open(mask_image_path, \"rb\") as input_file:\n",
-    "#     mask_image = input_file.read()"
+    "def read_rgba_image(path: Path, resize: Tuple[int, int]) -> bytes:\n",
+    "    image = Image.open(path)\n",
+    "    if resize is not None:\n",
+    "        image = image.resize(resize)\n",
+    "    image = image.convert('RGBA')\n",
+    "    bytes_stream = BytesIO()\n",
+    "    image.save(bytes_stream, format='PNG')\n",
+    "    return bytes_stream.getvalue()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "our_image_in_bytes = read_rgba_image(path=our_image_path, resize=(1024, 1024))\n",
+    "our_masked_image_in_bytes = read_rgba_image(path=our_masked_image_path, resize=(1024, 1024))\n",
+    "\n",
+    "prompt = \"picture of a dog and a rabbit\"\n",
+    "\n",
+    "N = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject at 0x167659dbc70> JSON: {\n",
-       "  \"created\": 1682778674,\n",
+       "<OpenAIObject at 0x1dcab6d0d60> JSON: {\n",
+       "  \"created\": 1683431464,\n",
        "  \"data\": [\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-LBLgoOpuZ19aQovKDeb4uAAe.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=mBpCPCt%2BerEDj31fSNa6nEYscXNmemD2BdrIPPOzet4%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-91y4k2P8YpqHSRIF2sBq5nVc/user-mfU3YzF0IkDYuNtXT6eXoaCA/img-aZ6yuuxF5oyJj5HaYcdPlCeB.png?st=2023-05-07T02%3A51%3A03Z&se=2023-05-07T04%3A51%3A03Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-07T00%3A40%3A29Z&ske=2023-05-08T00%3A40%3A29Z&sks=b&skv=2021-08-06&sig=h27PD2483eNwtlEdGhJknfLFUWUlSzBTdp7iA4SSCI8%3D\"\n",
        "    },\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-4c4CSZhNY96zgaLyZOMsxGlA.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=gAmTGMaAoz3P0imzAfsFSwfew8Zboc3r6k6guVxNlYY%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-91y4k2P8YpqHSRIF2sBq5nVc/user-mfU3YzF0IkDYuNtXT6eXoaCA/img-aEFQ337OPNAzJ3hjeXBtlLhp.png?st=2023-05-07T02%3A51%3A03Z&se=2023-05-07T04%3A51%3A03Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-07T00%3A40%3A29Z&ske=2023-05-08T00%3A40%3A29Z&sks=b&skv=2021-08-06&sig=Nr3B1bb9HIQQLGsuRuR/HA/WuXtR90aJhHXT5XVqyv4%3D\"\n",
        "    },\n",
        "    {\n",
-       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-cMTxulHrZu4RiHTDOOC5Sq8F/user-UTU3UtZNkTazInOssjlrK53K/img-daieP4elU1KcuQP79pGu1ydK.png?st=2023-04-29T13%3A31%3A14Z&se=2023-04-29T15%3A31%3A14Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-04-29T00%3A15%3A16Z&ske=2023-04-30T00%3A15%3A16Z&sks=b&skv=2021-08-06&sig=tmK2OMvdyloCrPK6HKvWLTMX3tu6SKKahTTOE8VeJnA%3D\"\n",
+       "      \"url\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-91y4k2P8YpqHSRIF2sBq5nVc/user-mfU3YzF0IkDYuNtXT6eXoaCA/img-sMCTnUn5dnX1LPzXqmJER9Pj.png?st=2023-05-07T02%3A51%3A04Z&se=2023-05-07T04%3A51%3A04Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2023-05-07T00%3A40%3A29Z&ske=2023-05-08T00%3A40%3A29Z&sks=b&skv=2021-08-06&sig=NQ7gd7mlTLjviCcjw83FDEkECUgHLvMsm3h0sbZe9aQ%3D\"\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# APIConnectionError: Error communicating with OpenAI: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))\n",
-    "prompt = \"put the two blue and white mustangs together in front of each other\"\n",
-    "\n",
-    "N = 3\n",
-    "\n",
     "response = openai.Image.create_edit(\n",
-    "    image=our_image,\n",
-    "    mask=mask_image,\n",
-    "    prompt=prompt,\n",
-    "    n=N,\n",
-    "    size=\"512x512\"\n",
+    "  image=our_image_in_bytes,\n",
+    "  mask=our_masked_image_in_bytes,\n",
+    "  prompt=prompt,\n",
+    "  n=N,\n",
+    "  size=\"1024x1024\"\n",
     ")\n",
-    "\n",
     "response"
    ]
   },
@@ -117,7 +130,7 @@
     "    \n",
     "    req_response = requests.get(url=image_url, timeout=10)\n",
     "\n",
-    "    prompt_outcome_filepath = outcome_dirpath / f\"mustang_edit_{idx}.png\"\n",
+    "    prompt_outcome_filepath = outcome_dirpath / f\"output_edited_img_{idx}.png\"\n",
     "\n",
     "    if req_response.status_code == 200:\n",
     "        with open(prompt_outcome_filepath, \"wb\") as output:\n",
